// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/kubernetes/extract extractPackageFile() extracts image line in a YAML array 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v2.1.0",
    "datasource": "docker",
    "depName": "external_storage/local-volume-provisioner",
    "registryUrls": Array [
      "https://quay.io",
    ],
    "replaceString": "quay.io/external_storage/local-volume-provisioner:v2.1.0",
  },
]
`;

exports[`manager/kubernetes/extract extractPackageFile() extracts multiple image lines 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "1.7.9",
    "datasource": "docker",
    "depName": "nginx",
    "replaceString": "nginx:1.7.9",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v1.11.1",
    "datasource": "docker",
    "depName": "kube-proxy-amd64",
    "registryUrls": Array [
      "https://k8s.gcr.io",
    ],
    "replaceString": "k8s.gcr.io/kube-proxy-amd64:v1.11.1",
  },
]
`;
